New changes for performance.